# anamerger

./: CMakeCache.txt  CMakeLists.txt  README.md
config/: CMakeLists.txt  anamerger_config.yaml  config_gen.sh.in  configallnuclides.sh
include/: AnamergerLinkDef.h  AnamergerSelector.h  LibraryConfig.h.in  hIsotope.h
mergerLists/: CMakeLists.txt  mergerList.txt
reference_cuts/: CMakeLists.txt  referenceCuts_Co.txt  referenceCuts_Cu.txt  referenceCuts_Ga.txt  referenceCuts_Ge.txt  referenceCuts_Ni.txt  referenceCuts_Zn.txt  referenceCuts_all.txt
scripts/: CMakeLists.txt  run_anamerger.py
share/: CMakeLists.txt  setup.sh.in
source/: AnamergerMain.cpp  AnamergerSelector.cpp  CMakeLists.txt  hIsotope.cxx
